# deephaven-rust-client

./: Cargo.toml  README.md  build.rs
deephaven/proto/: session.proto  ticket.proto
src/: lib.rs  main.rs  table_handle.rs  ticket_factory.rs
src/grpc/: flight.rs  mod.rs  session.rs  table.rs
